2009-03-20  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_send): Setting the
	command division character to nothing now disables command division
	rather than crashing gnome-mud horribly.

2009-03-20  Les Harris  <lharris@gnome.org>

	* data/icons/Makefile.am:
	* data/icons/hicolor_apps_16x16_gnome-mud-positive.png:
	* data/icons/hicolor_apps_16x16_gnome-mud-negative.png:
	* src/gnome-mud-icons.h: Added two new gnomemud stock icons.
	* src/mud-connection-view.c (mud_connection_view_network_event_cb):
	Added calls to mud_window_toggle_icon() when data is fed to VTE.
	* src/mud-window.[ch] (mud_window_notebook_page_change),
	(mud_window_toggle_tab_icon), (mud_window_add_connection_view),
	(mud_window_disconnected): Added new function: mud_window_toggle_icon
	which will change a tab's icon to positive if it receives data while
	not the current tab.  Updated MudWindow to utilize this to notify the
	user of activity on muds they aren't looking at.

2009-03-20  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_set_property): Calls
	mud_window_toggle_input_mode() when local-echo is set.
	* src/mud-window.[ch] (mud_window_init),
	(mud_window_grab_entry_focus_cb), (mud_window_entry_keypress),
	(mud_window_notebook_page_change), (mud_window_configure_event),
	(mud_window_toggle_input_mode): Added a password entry that is hidden
	when local echo is enabled.  When the server asks for echo it hides
	the textview and displays the entry for more secure password input.
	* ui/main.glade: Added password entry ui.

2009-03-20  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_send): Input history
	fixes, no longer adds blank lines to the history queue. Now only sends
	properly terminated lines (\r\n).  If ZMP is enabled, now uses
	zmp.input to send input to the server.
	* src/mud-subwindow.c (mud_subwindow_entry_keypress_cb): Updated